# it-school-base-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: Card.cpp  Card.h
tests/: test_math_utils.cpp
